--- a/style.css
+++ b/style.css
@@ -73,9 +73,108 @@ h1 {
 	text-align: center;
 }
 
+h2 {
+	margin: 0;
+}
+
 .center_p {
 	margin: 5px 0;
 	text-align: center;
+}
+
+/*電卓*/
+
+main {
+	margin: 30px 0;
+}
+
+.settings {
+	display: inline-block;
+	width: 20%;
+	height: 100px;
+	padding: 0 1%;
+}
+
+#buttons {
+	display: inline-block;
+	width: 80%;
+	position: relative;
+	top: -100px;
+	left: 20%;
+}
+
+/*答えのところ*/
+
+#answer {
+	padding: 20px;
+	max-width: 80%;
+	height: 40px;
+	overflow: auto;
+	background-color: #ffe935;
+	margin: 0 auto;
+	margin-bottom: 20px;
+	border-radius: 20px;
+	text-align: right;
+	font-size: 26px;
+}
+
+#cursor {
+	display: inline-block;
+	background-color: #000;
+	width: 2px;
+	height: 30px;
+	margin-left: 5px;
+}
+
+/*ボタン*/
+
+button {
+	width: 12.5%;
+	height: 50px;
+	border: none;
+	border-radius: 10px;
+	font-size: 20px;
+	margin-bottom: 10px;
+	margin-right: 10px;
+	transition-property: background-color;
+	transition-duration: 500ms;
+	transition-delay: 0s;
+}
+
+.blueButton {
+	background-color: #3cd5ff;
+}
+
+.pinkButton {
+	background-color: #ffadd2;
+}
+
+.greenButton {
+	background-color: #96e034;
+}
+
+.blueButton:hover {
+	background-color: #3cbfff;
+}
+
+.pinkButton:hover {
+	background-color: #ff8cc0;
+}
+
+.greenButton:hover {
+	background-color: #8cd62b;
+}
+
+.blueButton:active {
+	background-color: #3c8ff0;
+}
+
+.pinkButton:active {
+	background-color: #ff638a;
+}
+
+.greenButton:active {
+	background-color: #76ba1e;
 }
 
 /*フッター*/
@@ -104,7 +203,7 @@ footer {
 }
 
 .footer_p {
-	color: #80a4ff;
+	color: #afc4f8;
 	margin-top: 0;
 	text-align: right;
 	margin-left: 10px;
