--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header {
 
 .header_strong {
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 8px;
     margin-left: 10px;
     vertical-align: top;
 }
@@ -53,16 +53,18 @@ header {
     margin: 0;
 }
 
-.header_list {
-    line-height: 51px;
-    padding: 0 25px;
-    display: block;
-    float: left;
-    font-size: 25px;
-    background-color: #ade800;
-    transition-property: background-color;
-    transition-duration: 500ms;
-    transition-delay: 0s;
+@media screen and (min-width: 720px) {
+    .header_list {
+        line-height: 51px;
+        padding: 0 25px;
+        display: block;
+        float: left;
+        font-size: 25px;
+        background-color: #ade800;
+        transition-property: background-color;
+        transition-duration: 500ms;
+        transition-delay: 0s;
+    }
 }
 
 /*リンクの上にカーソルが乗ったとき*/
@@ -74,6 +76,160 @@ header {
 .header_link {
     text-decoration: none;
     color: black;
+}
+
+/*=========ナビゲーションのためのCSS===============*/
+
+@media screen and (max-width: 720px) {
+    #header_nav {
+        /*position:fixed;にし、z-indexの数値を大きくして前面へ*/
+        position: fixed;
+        z-index: 999;
+        /*ナビのスタート位置と形状*/
+        top: 0;
+        right: -120%;
+        width: 50%;
+        height: 100vh;
+        /*ナビの高さ*/
+        background: #ade800;
+        /*動き*/
+        transition: all 0.6s;
+    }
+    /*アクティブクラスがついたら位置を0に*/
+    #header_nav.panelActive {
+        right: 0;
+    }
+    /*ナビゲーションの縦スクロール*/
+    #header_nav.panelActive #g-nav-list {
+        /*ナビの数が増えた場合縦スクロール*/
+        position: fixed;
+        z-index: 999;
+        width: 50%;
+        height: 100vh;
+        /*表示する高さ*/
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+    /*ナビゲーション*/
+    #header_list {
+        /*ナビゲーション天地中央揃え*/
+        position: absolute;
+        z-index: 999;
+        padding: 0;
+        width: 100%;
+        margin-top: 150px;
+    }
+    /*リストのレイアウト設定*/
+    .header_list {
+        width: 100%;
+        line-height: 150%;
+        display: block;
+        font-size: 1.5em;
+        background-color: #ade800;
+        transition-property: background-color;
+        transition-duration: 500ms;
+        transition-delay: 0s;
+        list-style: none;
+        text-align: center;
+    }
+    .header_link {
+        color: #333;
+        text-decoration: none;
+        padding: 10px 0;
+        display: block;
+    }
+    /*========= アイコンのためのCSS ===============*/
+    #title_icon {
+        display: inline-block;
+        margin-top: 4px;
+        width: 30px;
+    }
+    #title {
+        text-align: center;
+        position: fixed;
+        z-index: 999;
+        /*ナビのスタート位置と形状*/
+        top: 0;
+        right: -120%;
+        width: 50%;
+        margin-top: 50px;
+        /*動き*/
+        transition: all 0.6s;
+    }
+    .header_strong {
+        display: block;
+    }
+    #title.titleActive {
+        right: 0;
+    }
+    /*========= ボタンのためのCSS ===============*/
+    /*ボタン外側*/
+    .openBtn {
+        position: absolute;
+        /*ボタン内側の基点となるためrelativeを指定*/
+        z-index: 9999;
+        background: #26cfd4;
+        right: 10px;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        margin-top: 5px;
+        border-radius: 5px;
+    }
+    /*ボタン内側*/
+    .openBtn span {
+        display: inline-block;
+        transition: all .4s;
+        /*アニメーションの設定*/
+        position: absolute;
+        left: 11px;
+        height: 2px;
+        border-radius: 5px;
+        background: #fff;
+        width: 45%;
+    }
+    .openBtn span:nth-of-type(1) {
+        top: 9px;
+    }
+    .openBtn span:nth-of-type(2) {
+        top: 15px;
+    }
+    .openBtn span:nth-of-type(3) {
+        top: 21px;
+    }
+    .openBtn span:nth-of-type(3)::after {
+        content: "Menu";
+        /*3つ目の要素のafterにMenu表示を指定*/
+        position: absolute;
+        top: 5px;
+        left: -5px;
+        color: #fff;
+        font-size: 0.6rem;
+        text-transform: uppercase;
+    }
+    /*activeクラスが付与されると線が回転して×になり、Menu⇒Closeに変更*/
+    .openBtn.active span:nth-of-type(1) {
+        top: 10px;
+        left: 14px;
+        transform: translateY(6px) rotate(-45deg);
+        width: 30%;
+    }
+    .openBtn.active span:nth-of-type(2) {
+        opacity: 0;
+    }
+    .openBtn.active span:nth-of-type(3) {
+        top: 22px;
+        left: 14px;
+        transform: translateY(-6px) rotate(45deg);
+        width: 30%;
+    }
+    .openBtn.active span:nth-of-type(3)::after {
+        content: "Close";
+        /*3つ目の要素のafterにClose表示を指定*/
+        transform: translateY(0) rotate(-45deg);
+        top: 5px;
+        left: 2px;
+    }
 }
 
 /*javascriptが無効のとき*/
@@ -168,8 +324,8 @@ main {
     width: 2px;
     height: 30px;
     margin-left: 5px;
-    position: absolute;
-    top: 211px;
+    position: relative;
+    top: 5px;
 }
 
 /*ボタン*/
@@ -283,4 +439,8 @@ footer {
 
 .footer_3 a {
     color: #3cd5ff;
+}
+
+.noLivvic {
+    font-family: 'Noto Sans JP', sans-serif;
 }
