--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ h1 {
 }
 
 h2 {
-    margin: 20px;
+    margin: 20px 0;
     background-color: #eee;
     font-size: 30px;
     padding: 10px 30px;
@@ -414,7 +414,7 @@ button {
 
 section {
     margin-bottom: 20px;
-    padding: 50px;
+    padding: 5%;
 }
 
 section p {
@@ -422,7 +422,7 @@ section p {
 }
 
 h3 p {
-    margin-left: 30px;
+    margin-left: 5%;
 }
 
 /*フッター*/
