--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ body {
     margin: 0;
     font-family: 'Livvic', 'Noto Sans JP', sans-serif;
     font-weight: 400;
+    background-color: white;
+    color: black;
 }
 
 /*ヘッダーの設定*/
@@ -75,6 +77,7 @@ header {
     z-index: 99;
     top: 0px;
     z-index: 99;
+    opacity: 0.8;
 }
 
 /*タイトル画像の設定*/
@@ -158,10 +161,12 @@ header {
         /*動き*/
         transition: all 0.6s;
     }
+
     /*アクティブクラスがついたら位置を0に*/
     #header_nav.panelActive {
         right: 0;
     }
+
     /*ナビゲーションの縦スクロール*/
     #header_nav.panelActive #g-nav-list {
         /*ナビの数が増えた場合縦スクロール*/
@@ -170,6 +175,7 @@ header {
         width: 50%;
         height: 100vh;
     }
+
     /*ナビゲーション*/
     #header_list {
         /*ナビゲーション天地中央揃え*/
@@ -180,6 +186,7 @@ header {
         margin-top: 150px;
         border-top: solid 2px #22c414;
     }
+
     /*リストのレイアウト設定*/
     .header_list {
         width: 100%;
@@ -194,15 +201,18 @@ header {
         text-align: center;
         border-bottom: solid 2px #22c414;
     }
+
     .header_list:hover {
         background-color: #48b117;
     }
+
     .header_link {
         color: #333;
         text-decoration: none;
         padding: 10px 0;
         display: block;
     }
+
     /*========= アイコンのためのCSS ===============*/
     #title_icon {
         display: inline-block;
@@ -210,6 +220,7 @@ header {
         width: 30px;
         margin-left: 30px;
     }
+
     #title {
         text-align: center;
         position: fixed;
@@ -223,12 +234,15 @@ header {
         /*動き*/
         transition: all 0.6s;
     }
+
     .header_strong {
         display: block;
     }
+
     #title.titleActive {
         right: 0;
     }
+
     /*========= ボタンのためのCSS ===============*/
     /*ボタン外側*/
     .openBtn {
@@ -243,6 +257,7 @@ header {
         margin-top: 5px;
         border-radius: 5px;
     }
+
     /*ボタン内側*/
     .openBtn span {
         display: inline-block;
@@ -255,15 +270,19 @@ header {
         background: #fff;
         width: 45%;
     }
+
     .openBtn span:nth-of-type(1) {
         top: 9px;
     }
+
     .openBtn span:nth-of-type(2) {
         top: 15px;
     }
+
     .openBtn span:nth-of-type(3) {
         top: 21px;
     }
+
     .openBtn span:nth-of-type(3)::after {
         content: "Menu";
         /*3つ目の要素のafterにMenu表示を指定*/
@@ -274,10 +293,12 @@ header {
         font-size: 0.6rem;
         text-transform: uppercase;
     }
+
     /*activeクラスが付与されているとき、ボタンを動かさない.*/
     .openBtn.active {
         position: fixed;
     }
+
     /*activeクラスが付与されると線が回転して×になり、Menu⇒Closeに変更*/
     .openBtn.active span:nth-of-type(1) {
         top: 10px;
@@ -285,15 +306,18 @@ header {
         transform: translateY(6px) rotate(-45deg);
         width: 30%;
     }
+
     .openBtn.active span:nth-of-type(2) {
         opacity: 0;
     }
+
     .openBtn.active span:nth-of-type(3) {
         top: 22px;
         left: 14px;
         transform: translateY(-6px) rotate(45deg);
         width: 30%;
     }
+
     .openBtn.active span:nth-of-type(3)::after {
         content: "Close";
         /*3つ目の要素のafterにClose表示を指定*/
@@ -358,11 +382,12 @@ h3 {
 
 main {
     margin: 30px 0;
+    height: 430px;
 }
 
 #white {
     display: inline-block;
-    width: calc(14% + 56px);
+    width: calc(8% + 56px);
     height: 310px;
     z-index: 66;
     background-color: white;
@@ -373,9 +398,9 @@ main {
     position: relative;
     z-index: 9;
     /*ナビのスタート位置と形状*/
-    left: -58%;
-    top: -310px;
-    width: 70%;
+    left: -65%;
+    top: -305px;
+    width: 75%;
     height: 300px;
     /*ナビの高さ*/
     background: #eee;
@@ -386,7 +411,7 @@ main {
 /*アクティブクラスがついたら位置を0に*/
 
 #setNav.setPanelActive {
-    left: calc(14% + 56px);
+    left: calc(8% + 56px);
 }
 
 /*ナビゲーションの縦スクロール*/
@@ -427,17 +452,22 @@ main {
     cursor: pointer;
     padding: 5px 15px 3px 5px;
     top: -235px;
-    display: inline;
+    display: inline-block;
 }
 
 .material-icons-round.md-36 {
+    background: none;
     font-size: 36px;
+}
+
+.humbugger:active .md-36 {
+    background-color: #b6ebfad2;
 }
 
 .downCalc {
     width: 86%;
     position: relative;
-    left: 14%;
+    left: 8%;
     top: -600px
 }
 
@@ -497,17 +527,18 @@ input[type="checkbox"] {
 /*ボタン*/
 
 button {
-    width: 20%;
+    width: 23%;
     height: 50px;
     border: none;
     border-radius: 10px;
     padding: 0;
     font-size: 20px;
     margin-bottom: 10px;
-    margin-right: 10px;
+    margin-right: 1%;
     transition-property: background-color;
     transition-duration: 500ms;
     transition-delay: 0s;
+    cursor: pointer;
     font-family: 'Livvic', 'Noto Sans JP', sans-serif;
 }
 
@@ -549,43 +580,60 @@ button {
 
 @media screen and (max-width: 710px) {
     .downCalc {
-        left: 13%;
-        width: 85%;
+        left: 10%;
+        width: 90%;
     }
+
     #white {
-        width: calc(13% + 46px);
+        width: calc(10% + 46px);
     }
+
     #setNav {
         width: 80%;
         left: -95%
     }
+
     #setNav.setPanelActive {
         left: 13%;
     }
-    button {
-        width: 18%;
-    }
+
     #buttons {
-        width: 80%;
+        width: 85%;
     }
+
+    button {
+        width: 20%;
+    }
+
     .humbugger {
         padding-right: 5px;
     }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 380px) {
     .material-icons-round.md-36 {
         font-size: 30px;
     }
+
     button {
         width: 16%;
     }
+
     #white {
         width: calc(8% + 34px);
     }
+
     .downCalc {
         left: 8%;
         width: 92%;
+    }
+
+    #buttons {
+        width: 75%;
+    }
+
+    button {
+        width: 20%;
     }
 }
 
@@ -607,6 +655,7 @@ h3 p {
 iframe {
     width: 100%;
     height: 900px;
+    border: none;
 }
 
 @media screen and (max-width: 550px) {
@@ -615,7 +664,7 @@ iframe {
     }
 }
 
-@media screen  and (max-width: 450px){
+@media screen and (max-width: 450px) {
     iframe {
         height: 1300px;
     }
@@ -675,18 +724,22 @@ footer {
     .footer_1 {
         text-align: center;
     }
+
     .footer_1 a {
         display: block;
         margin: 10px 0;
     }
+
     .footer_p>span {
         display: block;
         margin: 10px 0;
         text-align: center;
     }
+
     .footer_p {
         margin-top: 50px;
     }
+
     .footer_3 {
         margin-top: 50px;
     }
