--- a/style.css
+++ b/style.css
@@ -152,14 +152,11 @@ header.DownMove {
 
 #title_image {
     width: 130px;
-    image-rendering: -webkit-optimize-contrast;
-    ;
 }
 
 #title_icon {
     display: none;
     width: 30px;
-    image-rendering: -webkit-optimize-contrast;
 }
 
 .header_strong {
@@ -769,11 +766,20 @@ h3 p {
     margin-left: 5%;
 }
 
+.mainPicture {
+    display: block;
+    width: 100%;
+}
+
 iframe {
     width: 100%;
     height: 900px;
     margin: 0;
     border: none;
+}
+
+img {
+    image-rendering: -webkit-optimize-contrast;
 }
 
 @media screen and (max-width: 550px) {
